# Panda_control_with_AMRA_Star

./: .gitignore  README.md
src/amra_star/: CMakeLists.txt  package.xml
src/amra_star/include/AMRA_Star/: HeuristicManager.h  ThreeDmap.h  amra_star.hpp
src/amra_star/src/: amra_star.cpp
src/my_robot_msgs/: CMakeLists.txt  package.xml
src/my_robot_msgs/action/: MoveToPose.action
src/panda_controller/: CMakeLists.txt  package.xml
src/panda_controller/launch/: panda_amra_control.launch.py  panda_control.launch.py  test_obs.launch.py
src/panda_controller/src/: amra_star_action_client.cpp  move_to_pose_server.cpp  obstacle_publisher.cpp  pose_actuator_client.cpp  pose_actuator_server.cpp  pose_subscriber.cpp  target_pose_publisher.cpp  test_my_action.cpp  trajectory_publisher.cpp
src/panda_description/: CMakeLists.txt  package.xml
src/panda_description/launch/: display.launch.py
src/panda_description/rviz/: default.rviz  panda.rviz  simple_robot.rviz  tes_obs.rviz  with_obstacles.rviz
src/panda_description/urdf/: panda.urdf
